# UnitConvert

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Pipfile  README.md  conanfile.py  conanfile.txt
applications/: CMakeLists.txt  uc.cpp
cmake/Modules/: function-check_version_compatibility.cmake  function-git_version.cmake
data/: make_unit_defs.py  unit_definitions.txt
doc/: Makefile  README.md.t  Tutorial.md
doc/writeups/OffsetUnitConversions/: .latexrun.db  main.aux  main.fls  main.tex
scripts/: bootstrap
scripts/utils/: build-and-test-conan-packages.sh  configure-project-template.sh  setup-project-template.sh  tag-release.sh  test-client.sh  update-project-template.sh  update-sources.py
src/: UnitConvert.hpp  unit_convert.hpp
src/UnitConvert/: BoostUnitRegistry.hpp  Dimension.cpp  Dimension.hpp  GlobalUnitRegistry.cpp  GlobalUnitRegistry.hpp  HighLevelFunctions.cpp  HighLevelFunctions.hpp  Quantity.hpp  Unit.cpp  Unit.hpp  UnitRegistry.cpp  UnitRegistry.hpp  add_si_prefixes.hpp  add_unit_expressions.hpp  basic_dimension.hpp  basic_dimension_registry.hpp  basic_quantity.hpp  basic_unit.hpp  basic_unit_registry.hpp  io.hpp  parsers.hpp  registered_quantity.hpp  si_dimension.hpp  si_quantity.hpp  si_unit.hpp  si_unit_registry.hpp  unit_registry.hpp  unit_registry_base.hpp
src/UnitConvert/boost/: runtime_quantity.hpp
src/UnitConvert/detail/: functions.hpp
src/UnitConvert/legacy/: Dimension.hpp  Quantity.hpp  Unit.cpp  Unit.hpp  UnitRegistry.cpp  UnitRegistry.hpp
src/pybind11/: pyUnitConvert.cpp
src/swig/: UnitConvertPYTHON_wrap.cxx
src/unit_convert/: io.hpp
src/unit_convert/detail/: functions.hpp  macros.hpp
src/unit_convert/dimensions/: basic_dimension.hpp  si_dimension.hpp
src/unit_convert/quantities/: add_registry.hpp  basic_quantity.hpp  si_quantity.hpp
src/unit_convert/unit_registries/: add_si_prefixes.hpp  basic_unit_registry.hpp  expression_unit_registry.hpp  global_unit_registry.cpp  global_unit_registry.hpp  parsers.hpp  si_expression_unit_registry.hpp  si_unit_registry.hpp  unit_registry_base.hpp
src/unit_convert/units/: basic_unit.hpp  si_unit.hpp
swig/: CMakeLists.txt  UnitConvert.i
testing/: CMakeLists.txt  pre-tag-release.sh
testing/CatchTests/: Benchmarks.cpp  BoostUnitRegistry.cpp  Bugs.cpp  Devel.cpp  Dimension.cpp  Examples.cpp  Parsers.cpp  PropertyTreeIntegration.cpp  Quantity.cpp  Unit.cpp  UnitRegistry.cpp  Usage.cpp  dimensions.cpp  parsers.cpp  quantities.cpp  unit_registries.cpp  units.cpp
testing/CatchTests/Bugs/: DetailsNamespace.cpp
testing/CatchTests/legacy/: BoostUnitRegistry.cpp  Bugs.cpp  Devel.cpp  Parsers.cpp  Quantity.cpp  UnitRegistry.cpp  Usage.cpp
testing/JestTests/: WasmUnitConvert.test.js
testing/PythonTests/: Approx.py  Benchmark.py  test_bindings.py  test_pint_comparisons.py
testing/client_project/: CMakeLists.txt  example.cpp
testing/include/: Benchmark.hpp
testing/wasm/: test-GetMagnitudeInUnit.html  test-HaveSameDimensions.html  test-UnitConvertString.html
wasm/WasmUnitConvert/: CMakeLists.txt  WasmUnitConvert.cpp
